@@ -11,13 +11,13 @@ Slash Commands
 * Fixed: Typing /kbmbuffs USERNAME works again.
 
 Percentage Monitor
-* New: Completely redesigned and made to be an module available to any raid encounter.
+* New: Completely redesigned and made to be a module available to any raid encounter.
 * New: The graphics have been overhauled.
 * New: Ability to freely scale the monitor via the mouse wheel, between 50%-150%.
 * New: Middle click [while unlocked] will reset the scale to default (100%)
 * New: Option to hide/display Boss names on the monitor.
 * New: Option to hide/display Boss percentages on the monitor (text form).
-* New: Option to hide/display Boss raid marks on the momitor (represented via internal Rift raid marks).
+* New: Option to hide/display Boss raid marks on the monitor (represented via internal Rift raid marks).
 
 Res Master
 * Change: Name changed to Res Master.
@@ -36,6 +36,8 @@ Ready Check
 
 Raids
 Endless Eclipse
+* Progenitor Saetos
+** New: Added Phase Monitor Percentage tracking for all mini bosses.
 * Matriarch of Pestilence
 ** New: Added Enrage Timer of 7 minutes.
 ** New: Added Interrupt Alert and Stop Trigger for Way of Decay.
